--- a/_includes/bgm.html
+++ b/_includes/bgm.html
@@ -11,7 +11,7 @@
       {% if page.bgm.type == "url" %}
         {{ page.bgm.src }}
       {% elsif page.bgm.type == "path" %}
-        {{ '/assets/audio/' | append: page.bgm.src }}
+        {{ '/blog/assets/audio/' | append: page.bgm.src }}
       {% endif %}
     </a>
   </div>
